--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BasecampExample</title>
+  <title>My Basecamp Example</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="container">
+		<div id="user_header">
+			<%= link_to "Sign Up", new_user_path %> or
+			<%= link_to "Sign In", new_session_path %>
+		</div>
+		<% flash.each do |name, msg| %>
+		<%= content_tag :div, msg, id: "flash_#{name}" %>
+		<% end %>
 
 <%= yield %>
-
+</div>
 </body>
 </html>
