--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,31 +1,33 @@
-<h1>Sign Up</h1>
+<div class="push_three seven columns">
+	<h1>Sign Up</h1>
 
-<%= form_for @user do |f| %>
+	<%= form_for @user do |f| %>
 	<% if @user.errors.any? %>
-		<div class="error_messages">
-			<h2>Form is invalid</h2>
-			<ul>
-				<% @user.errors.full_messages.each do |message| %>
-				<li><%= message %></li>
-				<% end %>
-			</ul>
-		</div>
+	<div class="error_messages">
+		<ul>
+			<% @user.errors.full_messages.each do |message| %>
+			<li><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
 	<% end %>
 
-<div class="field">
-	<%= f.label :email %><br />
-	<%= f.text_field :email %>
-</div>
+	<div class="field">
+		<%= f.label :email %>
+		<%= f.text_field :email, :class => "input" %>
+	</div>
 
-<div class="field">
-	<%= f.label :password %><br />
-	<%= f.password_field :password %>
-</div>
+	<div class="field">
+		<%= f.label :password %>
+		<input type="password" name="user[password]" class="input" id="user_password">
+	</div>
 
-<div class="field">
-	<%= f.label :password_confirmation %><br />
-	<%= f.password_field :password_confirmation %>
+	<div class="field">
+		<%= f.label :password_confirmation %>
+		<input type="password" name="user[password_confirmation]" class="input" id="user_password">
+	</div>
+	<div class="medium primary btn">
+		<%= f.submit %>
+	</div>
+	<% end %>
 </div>
-<div class="actions"><%= f.submit %>
-</div>
-<% end %>
