--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,11 @@
 	<%= csrf_meta_tags %>
 </head>
 <body>
-<<<<<<< HEAD
+
 	<div id="container">
 		<div id="user_header">
-			<% if current_user %>
-			Logged in as <%= current_user.email %>.
-			<%= link_to "Log Out", logout_path %>
-			<% else %>
-			<%= link_to "Sign Up", signup_path %> or
-			<%= link_to "Log In", login_path %>
-			<% end %>
-=======
+			
+
 	<nav class="navbar" id="navbar-main-nav">
 		<div class="row">
 			<a href="#" gumby-trigger="#navbar-main-nav #main-nav" class="toggle"><i class="icon-menu"></i></a>
@@ -26,17 +20,16 @@
 				<ul id="main-nav">
 					<li>
 						<p class="medium metro default btn icon-user icon-left">
-							<%= link_to "Sign Up", new_user_path %>
+							<%= link_to "Sign Up", signup_path %>
 						</p>
 					</li>
 					<li>
 						<p class="medium metro secondary btn icon-user icon-left">
-							<%= link_to "Sign In", new_session_path %>
+							<%= link_to "Sign In", login_path %>
 						</p>
 					</li>
 				</ul>
-			</nav>
->>>>>>> 8ee701d86e8ada68470e1f3fc15d6791483c4136
+			</nav>c4136
 		</div>
 	</nav>
 	<div class="row">
