--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,33 @@
 
 	<div id="container">
 		<div id="user_header">
-			
+			<% if current_user %>
+			Logged in as <%= current_user.email %>.
+			<%= link_to "Log Out", logout_path %>
+			<% else %>
+			<%= link_to "Sign Up", signup_path %> or
+			<%= link_to "Log In", login_path %>
+			<% end %>
 
 	<nav class="navbar" id="navbar-main-nav">
 		<div class="row">
 			<a href="#" gumby-trigger="#navbar-main-nav #main-nav" class="toggle"><i class="icon-menu"></i></a>
 			<nav class="ten columns pull_right">
 				<ul id="main-nav">
+
 					<li>
 						<p class="medium metro default btn icon-user icon-left">
 							<%= link_to "Sign Up", signup_path %>
 						</p>
 					</li>
-					<li>
+					<li>						
 						<p class="medium metro secondary btn icon-user icon-left">
 							<%= link_to "Sign In", login_path %>
 						</p>
 					</li>
+					
 				</ul>
-			</nav>c4136
+			</nav>
 		</div>
 	</nav>
 	<div class="row">
