--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,6 +13,16 @@
 	<% end %>
 
 	<div class="field">
+		<%= f.label :full_name %>
+		<%= f.text_field :full_name, :class => "input" %>
+	</div>
+
+	<div class="field">
+		<%= f.label :company_name %>
+		<%= f.text_field :company_name, :class => "input" %>
+	</div>
+
+	<div class="field">
 		<%= f.label :email %>
 		<%= f.text_field :email, :class => "input" %>
 	</div>
